[package]
name = "bevy_interact_2d"
version = "0.5.2"
authors = ["Ansho Rei <anshorei@protonmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A Bevy plugin for 2d mouse interactions"
keywords = ["mouse", "2d", "gamedev", "bevy"]
categories = ["game-engines"]
homepage = "http://github.com/Anshorei/bevy_interact_2d"
documentation = "http://github.com/Anshorei/bevy_interact_2d"
repository = "http://github.com/Anshorei/bevy_interact_2d"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
  "examples/*",
  "assets/*",
]

[dependencies]
bevy = "0.5"
bevy_prototype_lyon = "0.3"
spirv_headers = ">= 1.5.0, < 1.5.1"

[dev-dependencies]
rand = "0.8"

[[example]]
name = "trash_cleanup"
path = "examples/trash_cleanup.rs"
