[package]
name = "bevy_interact_2d"
version = "0.5.3"
authors = ["Ansho Rei <anshorei@protonmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A Bevy plugin for 2d mouse interactions"
keywords = ["mouse", "2d", "gamedev", "bevy"]
categories = ["game-engines"]
homepage = "http://github.com/Anshorei/bevy_rei"
documentation = "http://github.com/Anshorei/bevy_rei"
repository = "http://github.com/Anshorei/bevy_rei"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
  "examples/*",
  "assets/*",
]

[features]
debug = ["bevy_prototype_lyon"]

[dependencies]
bevy = { version = "0.5", default-features = false }
bevy_prototype_lyon = { version = "0.3", optional = true }

[dev-dependencies]
bevy = { version = "0.5", default-features = true }
rand = "0.8"

[[example]]
name = "trash_cleanup"
path = "examples/trash_cleanup.rs"
