[package]
name = "bevy_navmesh"
version = "0.5.0"
authors = ["Ansho Rei <anshorei@protonmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "A Bevy plugin for navigation meshes"
keywords = ["navigation", "2d", "3d", "ai", "gamedev", "bevy"]
categories = ["game-engines"]
homepage = "http://github.com/Anshorei/bevy_rei"
documentation = "http://github.com/Anshorei/bevy_rei"
repository = "http://github.com/Anshorei/bevy_rei"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
  "examples/*",
  "assets/*",
]

[features]
debug = ["bevy_prototype_lyon"]

[dependencies]
bevy = "0.5"
triangular = "0.1.1"
nalgebra = "0.26"
# navmesh = "0.8.2"
# navmesh = { git = "https://github.com/Anshorei/navmesh", rev = "989f08c", features = ["bevy"] }
navmesh = { path = "../../navmesh", features = ["bevy"] }
float-cmp = "0.8"
bevy_prototype_lyon = { version = "0.3", optional = true }

[dev-dependencies]
bevy_prototype_lyon = "0.3"

[[example]]
name = "debug"
path = "examples/debug.rs"
required-features = ["debug"]
